prov/cxi: Support SW EP mode only
Software endpoint mode is a feature which requires software to perform
the message matching that hardware would do. The benefit of this mode is
the number of posted receives and unexpected messages can scale past the
hardware LE limit. But, this comes at a performance cost.

Transition from hardware to software endpoint and back is currently not
supported.

FI_CXI_MSG_OFFLOAD is used to enable this feature. Request buffer count
and sizing is controlled with FI_CXI_REQ_BUF_COUNT and
FI_CXI_REQ_BUF_SIZE.

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -648,6 +648,24 @@ Default VNI value (masked to 16 bits).
 Number of EQ events to process before writing an acknowledgement to HW.
 Batching ACKs amortizes the cost of event acknowledgement over multiple
 network operations.
+.TP
+.B \f[I]FI_CXI_MSG_OFFLOAD\f[R]
+Enable or disable message matching offload.
+If disabled, the provider will perform the message matching.
+All incoming unmatched messages are written into a request buffer.
+The environment variables FI_CXI_REQ_BUF_SIZE and FI_CXI_REQ_BUF_COUNT
+are used to control the size and number of request buffers posted to
+handle incoming unmatched messages.
+.TP
+.B \f[I]FI_CXI_REQ_BUF_SIZE\f[R]
+Size of request buffers.
+Increasing the request buffer size allows for more unmatched messages to
+be sent into a single request buffer.
+.TP
+.B \f[I]FI_CXI_REQ_BUF_COUNT\f[R]
+Number of request buffers.
+Dynamically increasing and decreasing request buffer count is not
+currently supported.
 .PP
 Note: Use the fi_info utility to query provider environment variables:
 fi_info -p cxi -e
