prov/cxi: Desupport FAMOs with flush
FAMOs with flush are not supported (errata 3184).

For CAS-3184.

Signed-off-by: Zach Tiffany <zachary.tiffany@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -716,6 +716,10 @@ current capabilities.
 .PP
 unit tests are supported where the test feature set matches the CXI
 provider\[cq]s current capabilities.
+.SH ERRATA
+.IP \[bu] 2
+Fetch and compare type AMOs with FI_DELIVERY_COMPLETE or
+FI_MATCH_COMPLETE completion semantics are not supported.
 .SH SEE ALSO
 .PP
 \f[C]fabric\f[R](7), \f[C]fi_provider\f[R](7),
