prov/cxi: Add usec delay before retrying FC msgs
Since the target's EQ buffer is limited in size, flow control messages
may be dropped due to no EQ space. This is reported as
C_RC_ENTRY_NOT_FOUND to the initiator. Immediately retrying the
operation may not give the target enough time to free EQ space. Thus
immediately retrying could end up creating TRS contention which can lead
to cancels.

Introduce a usec sleep to allow for the target time to cleanup the EQ
buffer. This can be controlled with the FI_CXI_FC_RETRY_USEC_DELAY env
variable.

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -666,6 +666,11 @@ be sent into a single request buffer.
 Number of request buffers.
 Dynamically increasing and decreasing request buffer count is not
 currently supported.
+.TP
+.B \f[I]FI_CXI_FC_RETRY_USEC_DELAY\f[R]
+Number of micro-seconds to sleep before retrying a dropped side-band,
+flow control message.
+Setting to zero will disable any sleep.
 .PP
 Note: Use the fi_info utility to query provider environment variables:
 fi_info -p cxi -e
