--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -671,6 +671,18 @@ currently supported.
 Number of micro-seconds to sleep before retrying a dropped side-band,
 flow control message.
 Setting to zero will disable any sleep.
+.TP
+.B \f[I]FI_UNIVERSE_SIZE\f[R]
+Defines the maximum number of processes that will be used by distribute
+OFI application.
+.TP
+.B \f[I]FI_CXI_CTRL_RX_EQ_MAX_SIZE\f[R]
+Max size of the receive event queue used for side-band/control messages.
+Default receive event queue size is based on FI_UNIVERSE_SIZE.
+Increasing the receive event queue size can help prevent
+side-band/control messages from being dropped and retried but at the
+cost of additional memory usage.
+Size is always aligned up to a 4KiB boundary.
 .PP
 Note: Use the fi_info utility to query provider environment variables:
 fi_info -p cxi -e
