prov/cxi: Support dynamically setting CQ EQ size
Prior to this change, the underlying completion queue CXI event queues
were hard coded to 2 MiB. This change makes the CXI event queue size
based on completion queue size. In addition, for apps/middleware which
rely on the provider default completion queue size, the default
completion queue size can now be changed using FI_CXI_DEFAULT_CQ_SIZE.

Signed-off-by: Ian Ziemba <ian.ziemba@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -683,6 +683,11 @@ Increasing the receive event queue size can help prevent
 side-band/control messages from being dropped and retried but at the
 cost of additional memory usage.
 Size is always aligned up to a 4KiB boundary.
+.TP
+.B \f[I]FI_CXI_DEFAULT_CQ_SIZE\f[R]
+Change the provider default completion queue size.
+This may be useful for applications which rely on middleware, and
+middleware defaults the completion queue size to the provider default.
 .PP
 Note: Use the fi_info utility to query provider environment variables:
 fi_info -p cxi -e
