--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -702,7 +702,7 @@ fi_info -p cxi -e
 .PP
 The CXI provider supports various fabric-specific extensions.
 Extensions are accessed using the fi_open_ops function.
-Currently, extensions are only supported for CXI domains.
+.SS CXI Domain Extensions
 .PP
 CXI domain extensions have been named \f[I]FI_CXI_DOM_OPS_1\f[R].
 The flags parameter is ignored.
@@ -732,6 +732,73 @@ The cntr_read extension is used to read hardware counter values.
 Valid values of the cntr argument are found in the Cassini-specific
 header file cassini_cntr_defs.h.
 Note that Counter accesses by applications may be rate-limited to 1HZ.
+.SS CXI Counter Extensions
+.PP
+CXI counter extensions have been named \f[I]FI_CXI_COUNTER_OPS\f[R].
+The flags parameter is ignored.
+The fi_open_ops function takes a \f[C]struct fi_cxi_cntr_ops\f[R].
+See an example of usage below.
+.IP
+.nf
+\f[C]
+struct fi_cxi_cntr_ops *cntr_ops;
+
+ret = fi_open_ops(&cntr->fid, FI_CXI_COUNTER_OPS, 0, (void **)&cntr_ops, NULL);
+\f[R]
+.fi
+.PP
+The following domain extensions are defined:
+.IP
+.nf
+\f[C]
+struct fi_cxi_cntr_ops {
+    /* Set the counter writeback address to a client provided address. */
+    int (*set_wb_buffer)(struct fid *fid, const void *buf, size_t len);
+
+    /* Get the counter MMIO region. */
+    int (*get_mmio_addr)(struct fid *fid, void **addr, size_t *len);
+};
+\f[R]
+.fi
+.SS CXI Counter Writeback Flag
+.PP
+If a client is using the CXI counter extensions to define a counter
+writeback buffer, the CXI provider will not update the writeback buffer
+success or failure values for each hardware counter success or failure
+update.
+This can especially create issues when clients expect the completion of
+a deferred workqueue operation to generate a counter writeback.
+To support this, the flag \f[I]FI_CXI_CNTR_WB\f[R] can be used in
+conjunction with a deferred workqueue operation to force a writeback at
+the completion of the deferred workqueue operation.
+See an example of usage below.
+.IP
+.nf
+\f[C]
+struct fi_op_rma rma = {
+  /* Signal to the provider the completion of the RMA should trigger a
+   * writeback.
+   */
+  .flags = FI_CXI_CNTR_WB,
+};
+
+struct fi_deferred_work rma_work = {
+  .op_type = FI_OP_READ,
+  .triggering_counter = cntr,
+  .completion_cntr = cntr,
+  .threshold = 1,
+  .op.rma = &rma,
+};
+
+ret = fi_control(&domain->fid, FI_QUEUE_WORK, &rma_work);
+\f[R]
+.fi
+.PP
+\f[B]Note:\f[R] Using \f[I]FI_CXI_CNTR_WB\f[R] will lead to additional
+hardware usage.
+To conserve hardware resources, it is recommended to only use the
+\f[I]FI_CXI_CNTR_WB\f[R] when a counter writeback is absolutely
+required.
 .SH FABTESTS
 .PP
 The CXI provider does not currently support fabtests which depend on IP
