prov/cxi: Update configurable run-time environment options
Entering flow-control is no longer experimental and
always enabled; remove code and documentation to disable it.

On-loading of the rendezvous protocol requires message
matching be off-loaded. If rendezvous is on-loaded,
then force message offloading to be true, disabling
software managed EP.

Allow setting of RX matching mode to support setting of
"hardware" only, "software" only, and a "hybrid" that
starts with hardware matching, but when resources are
low will transition to hybrid mode, sharing matching
responsibility with software.

NETCASSINI-2412

Signed-off-by: Steve Welch <welch@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -290,7 +290,10 @@ The CXI provider supports both tagged (\f[I]FI_TAGGED\f[R]) and untagged
 In the normal case, message matching is performed by hardware.
 In certain low resource conditions, the responsibility to perform
 message matching may be transferred to software.
-This is transparently handled by the provider.
+Specification of the receive message matching mode in the environment
+(\f[I]FI_CXI_RX_MATCH_MODE\f[R]) controls the initial matching mode and
+whether hardware matching can transparently onload matching to software
+where a hybrid of hardware and software matching is done.
 .PP
 If a Send operation arrives at a node where there is no matching Receive
 operation posted, it is considered unexpected.
@@ -334,9 +337,25 @@ entire payload is dropped.
 Later, when the message is matched to a Receive operation, the entire
 payload is pulled from the source using an RDMA Get operation.
 .PP
-The rendezvous protcol is controlled using the
+The rendezvous protocol is controlled using the
 \f[I]FI_CXI_RDZV_OFFLOAD\f[R] environment variable.
 The provider uses the offloaded rendezvous protocol by default.
+.PP
+Message flow-control is triggered when hardware message matching
+resources become exhausted.
+Messages may be dropped and retransmitted in order to recover; impacting
+performance significantly.
+Programs should be careful to avoid posting large numbers of unmatched
+receive operations and to minimize the number of outstanding unexpected
+messages to prevent message flow-control.
+If message matching is configured to support a hybrid mode, when
+resources are exhausted hardware and software share matching
+responsibility.
+.PP
+To help avoid this condition, increase Overflow buffer space using
+environment variables \f[I]FI_CXI_OFLOW_*\f[R] and software EP match and
+hybrid modes Request buffer space using the variables
+\f[I]FI_CXI_REQ_*\f[R].
 .SS Message Ordering
 .PP
 The CXI provider supports the following ordering rules:
@@ -581,27 +600,15 @@ Using mlockall() may increase pressure on physical memory.
 Ignored when ODP is disabled.
 .TP
 \f[I]FI_CXI_RDZV_OFFLOAD\f[R]
-Enables offloaded rendezvous messaging protocol.
+Controls the offload of the rendezvous messaging protocol, defaults to
+offloaded rendezvous protocol.
+Selecting the eager rendezvous protocol by disabling offload requires
+that message offload is enabled and will override the setting of
+\f[I]FI_CXI_MSG_OFFLOAD\f[R] and disable the fallback to software
+managed EP mode when hardware resources are low.
 .TP
 \f[I]FI_CXI_RDZV_THRESHOLD\f[R]
 Message size threshold for rendezvous protocol.
-.TP
-\f[I]FI_CXI_FC_RECOVERY\f[R]
-Enables message flow-control recovery.
-Message flow-control is triggered when hardware message matching
-resources become exhausted.
-Messages may be dropped and retransmitted in order to recover.
-This impacts performance significantly.
-.RS
-.PP
-Programs should be careful to avoid using large numbers of unmatched
-receive operations and unexpected messages to prevent message
-flow-control.
-To help avoid this condition, increase Overflow buffer space using
-environment variables \f[I]FI_CXI_OFLOW_*\f[R].
-.PP
-Flow control recovery is enabled by default.
-.RE
 .TP
 \f[I]FI_CXI_RDZV_GET_MIN\f[R]
 Minimum rendezvous Get payload size.
@@ -649,13 +656,27 @@ Number of EQ events to process before writing an acknowledgement to HW.
 Batching ACKs amortizes the cost of event acknowledgement over multiple
 network operations.
 .TP
-\f[I]FI_CXI_MSG_OFFLOAD\f[R]
-Enable or disable message matching offload.
-If disabled, the provider will perform the message matching.
-All incoming unmatched messages are written into a request buffer.
-The environment variables FI_CXI_REQ_BUF_SIZE and FI_CXI_REQ_BUF_COUNT
-are used to control the size and number of request buffers posted to
-handle incoming unmatched messages.
+\f[I]FI_CXI_RX_MATCH_MODE\f[R]
+Specify the receive message matching mode to be utilized.
+.RS
+.PP
+\f[I]\[lq]hardware\[rq]\f[R] - Message matching is fully offloaded, if
+resources become exhausted flow control will be performed.
+.PP
+\f[I]\[lq]software\[rq]\f[R] - Message matching is fully onloaded.
+.PP
+\f[I]\[lq]hybrid\[rq]\f[R] - Message matching begins fully offloaded, if
+resources become exhuasted hardware will transition message matching to
+a hybrid of hardware and software matching.
+.PP
+For both \f[I]\[lq]hybrid\[rq]\f[R] and \f[I]\[lq]software\[rq]\f[R]
+modes, rendezvous processing must be offloaded, and care should be taken
+to minimize the threshold for rendezvous processing
+(i.e.\ \f[I]FI_CXI_RDZV_THRESHOLD\f[R] + \f[I]FI_CXI_RDZV_GET_MIN\f[R]).
+The environment variables \f[I]FI_CXI_REQ_BUF_SIZE\f[R] and
+\f[I]FI_CXI_REQ_BUF_COUNT\f[R] are used to control the size and number
+of request buffers posted to handle incoming unmatched messages.
+.RE
 .TP
 \f[I]FI_CXI_REQ_BUF_SIZE\f[R]
 Size of request buffers.
