prov/cxi: Don't restrict offloaded rendezvous ID count
When implementing FI_REMOTE_CQ_DATA support, rendezvous
IDs were restricted to 7 bits due to the long eager
protocol match bit requirements. This change considers
whether rendezvous processing is offloaded to hardware,
and if so permits the full 8 bits of rendezvous ID to
be used.

Signed-off-by: Steve Welch <welch@hpe.com>

--- a/man/man7/fi_cxi.7
+++ b/man/man7/fi_cxi.7
@@ -342,6 +342,8 @@ payload is pulled from the source using an RDMA Get operation.
 The selection of the rendezvous protocol is controlled using the
 \f[I]FI_CXI_RDZV_OFFLOAD\f[R] environment variable.
 The provider uses the offloaded rendezvous protocol by default.
+Both the rendezvous source and target must use the same setting for
+protocol selection.
 .PP
 Message flow-control is triggered when hardware message matching
 resources become exhausted.
