--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ Ben Menadue <ben.menadue@nci.org.au>
 Ben Turrubiates <bturrubiates@lanl.gov>
 Ben Turrubiates <bturrubi@cisco.com>
 Bernd Schubert <bschubert@ddn.com>
+Bernhard M. Wiedemann <bwiedemann@suse.de>
 Brian Barrett <bbarrett@amazon.com>
 Brian J. Murrell <brian@interlinx.bc.ca>
 Brian Li <brian14708@gmail.com>
@@ -36,12 +37,15 @@ Chang Hyun Park <heartinpiece@gmail.com>
 Charles J Archer <charles.j.archer@intel.com>
 Chenwei Zhang <chenwz@amazon.com>
 Chen Zhao <soniczhao@gmail.com>
+Chien Tin Tung <chien.tin.tung@intel.com>
 Chris Dolan <chrisdolan@google.com>
 Chuck Fossen <chuckf@cray.com>
 Coni Gehler <cgehler@cray.com>
 Dardo D Kleiner <dkleiner@cmf.nrl.navy.mil>
 Dave Goodell <dgoodell@cisco.com>
 David Noel <david.noel19@gmail.com>
+Denis Maryin <denis.maryin@intel.com>
+Derek Shinaberry <dshinaberry@mru.medical.canon>
 Dipti Kothari <dkothar@amazon.com>
 Dmitry Durnov <dmitry.durnov@intel.com>
 Dmitry Gladkov <dmitry.gladkov@intel.com>
@@ -120,6 +124,8 @@ Michael Chuvelev <michael.chuvelev@intel.com>
 Mikhail Khalilov <miharulidze@gmail.com>
 Mikhail Khalilov <mikhail.khalilov@intel.com>
 Min Si <msi@anl.gov>
+Misbah Mubarak <mimubara@amazon.com>
+mmubarak <misbah.mubarak@gmail.com>
 Mohan Gandhi <mohgan@amazon.com>
 muttormark <mike.uttormark@hpe.com>
 Neil Spruit <neil.r.spruit@intel.com>
@@ -152,6 +158,7 @@ Raghu Raja <craghun@amazon.com>
 Raghu Raja <raghu@enfabrica.net>
 Raghu Raja <rajachan@protonmail.com>
 Raghu Raja <rajachan@users.noreply.github.com>
+Ralf Juengling <ralfjuen@amazon.com>
 Reese Faucette <rfaucett@cisco.com>
 Richard Halkyard <rhalkyard@cray.com>
 Rich Welch <rlwelch@amazon.com>
@@ -161,12 +168,14 @@ Sannikov, Alexander <alexander.sannikov@intel.com>
 Sayantan Sur <sayantan.sur@intel.com>
 Sean Hefty <sean.hefty@intel.com>
 Sergey Oblomov <sergey.oblomov@intel.com>
+Seth Zegelstein <szegel@amazon.com>
 Shantonu Hossain <shantonu.hossain@intel.com>
 Shi Jin <sjina@amazon.com>
 soblomov <sergey.oblomov@intel.com>
 Solovyev, Dmitriy <dmitriy.solovyev@intel.com>
 Spruit, Neil R <neil.r.spruit@intel.com>
 Srdjan Milakovic <srdjan@rice.edu>
+Srikrishna Gurugubelli <gurugubs@amazon.com>
 Stan Smith <stan.smith@intel.com>
 Stephen Oost <stephen.oost@intel.com>
 Steven Vormwald <sdvormwa@cray.com>
@@ -194,8 +203,10 @@ Xuyang Wang <xuywang@cisco.com>
 Yohann Burette <yohann.burette@intel.com>
 yohann <yohann.burette@intel.com>
 Yulu Jia <yulu.jia@intel.com>
+Zach Dworkin <zachary.dworkin@intel.com>
 Zach Tiffany <zachary.tiffany@hpe.com>
 Zach Tiffany <ztiffany@cray.com>
 Zach <ztiffany@cray.com>
 zdworkin <zachary.dworkin@intel.com>
+zhngaj <zhngaj@amazon.com>
 ztaylor <ztaylor@twitter.com>
