--- a/AUTHORS
+++ b/AUTHORS
@@ -28,6 +28,7 @@ Ben Menadue <ben.menadue@nci.org.au>
 Ben Turrubiates <bturrubiates@lanl.gov>
 Ben Turrubiates <bturrubi@cisco.com>
 Bernd Schubert <bschubert@ddn.com>
+Bernhard M. Wiedemann <bwiedemann@suse.de>
 Brian Barrett <bbarrett@amazon.com>
 Brian J. Murrell <brian@interlinx.bc.ca>
 Brian Li <brian14708@gmail.com>
@@ -152,6 +153,7 @@ Raghu Raja <craghun@amazon.com>
 Raghu Raja <raghu@enfabrica.net>
 Raghu Raja <rajachan@protonmail.com>
 Raghu Raja <rajachan@users.noreply.github.com>
+Ralf Juengling <ralfjuen@amazon.com>
 Reese Faucette <rfaucett@cisco.com>
 Richard Halkyard <rhalkyard@cray.com>
 Rich Welch <rlwelch@amazon.com>
@@ -194,6 +196,7 @@ Xuyang Wang <xuywang@cisco.com>
 Yohann Burette <yohann.burette@intel.com>
 yohann <yohann.burette@intel.com>
 Yulu Jia <yulu.jia@intel.com>
+Zach Dworkin <zachary.dworkin@intel.com>
 Zach Tiffany <zachary.tiffany@hpe.com>
 Zach Tiffany <ztiffany@cray.com>
 Zach <ztiffany@cray.com>
