--- a/AUTHORS
+++ b/AUTHORS
@@ -29,6 +29,7 @@ Ben Turrubiates <bturrubiates@lanl.gov>
 Ben Turrubiates <bturrubi@cisco.com>
 Bernd Schubert <bschubert@ddn.com>
 Bernhard M. Wiedemann <bwiedemann@suse.de>
+Brendan Cunningham <bcunningham@cornelisnetworks.com>
 Brian Barrett <bbarrett@amazon.com>
 Brian J. Murrell <brian@interlinx.bc.ca>
 Brian Li <brian14708@gmail.com>
@@ -66,6 +67,7 @@ Gilles Gouaillardet <gilles.gouaillardet@iferc.org>
 Gilles Gouaillardet <gilles@rist.or.jp>
 github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
 Goldman, Adam <adam.goldman@intel.com>
+Greg Inozemtsev <ginozemt@amazon.com>
 Hefty <sean.hefty@intel.com>
 Holger Hoffstätte <holger@applied-asynchrony.com>
 Honggang Li <honli@redhat.com>
@@ -121,6 +123,7 @@ Matt Koop <mkoop@amazon.com>
 Miao Luo <miao.luo@intel.com>
 Michael Blocksome <michael.blocksome@intel.com>
 Michael Chuvelev <michael.chuvelev@intel.com>
+Michael Heinz <mheinz@cornelisnetworks.com>
 Mikhail Khalilov <miharulidze@gmail.com>
 Mikhail Khalilov <mikhail.khalilov@intel.com>
 Min Si <msi@anl.gov>
