--- a/AUTHORS
+++ b/AUTHORS
@@ -37,12 +37,14 @@ Chang Hyun Park <heartinpiece@gmail.com>
 Charles J Archer <charles.j.archer@intel.com>
 Chenwei Zhang <chenwz@amazon.com>
 Chen Zhao <soniczhao@gmail.com>
+Chien Tin Tung <chien.tin.tung@intel.com>
 Chris Dolan <chrisdolan@google.com>
 Chuck Fossen <chuckf@cray.com>
 Coni Gehler <cgehler@cray.com>
 Dardo D Kleiner <dkleiner@cmf.nrl.navy.mil>
 Dave Goodell <dgoodell@cisco.com>
 David Noel <david.noel19@gmail.com>
+Derek Shinaberry <dshinaberry@mru.medical.canon>
 Dipti Kothari <dkothar@amazon.com>
 Dmitry Durnov <dmitry.durnov@intel.com>
 Dmitry Gladkov <dmitry.gladkov@intel.com>
@@ -63,6 +65,7 @@ Gilles Gouaillardet <gilles.gouaillardet@iferc.org>
 Gilles Gouaillardet <gilles@rist.or.jp>
 github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
 Goldman, Adam <adam.goldman@intel.com>
+Greg Inozemtsev <ginozemt@amazon.com>
 Hefty <sean.hefty@intel.com>
 Holger Hoffstätte <holger@applied-asynchrony.com>
 Honggang Li <honli@redhat.com>
