--- a/AUTHORS
+++ b/AUTHORS
@@ -181,6 +181,7 @@ Sung-Eun Choi <sungeun@cray.com>
 Sylvain Didelot <didelot.sylvain@gmail.com>
 Sylvain Didelot <sdidelot@ddn.com>
 Thananon Patinyasakdikul <apatinya@cisco.com>
+Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
 Thomas Smith <thomasm2@cisco.com>
 Todd Rimmer <todd.rimmer@intel.com>
