--- a/AUTHORS
+++ b/AUTHORS
@@ -24,6 +24,7 @@ AWS ParallelCluster user <centos@ip-172-31-23-100.ec2.internal>
 AWS ParallelCluster user <ec2-user@ip-172-31-0-240.us-east-2.compute.internal>
 AWS ParallelCluster user <ec2-user@ip-172-31-15-28.ec2.internal>
 Benjamin Drung <bdrung@debian.org>
+Ben Lynam <ben.lynam23@gmail.com>
 Ben Menadue <ben.menadue@nci.org.au>
 Ben Turrubiates <bturrubiates@lanl.gov>
 Ben Turrubiates <bturrubi@cisco.com>
@@ -36,6 +37,7 @@ Brian Li <brian14708@gmail.com>
 Casey Carter <cacarter@microsoft.com>
 Chang Hyun Park <heartinpiece@gmail.com>
 Charles J Archer <charles.j.archer@intel.com>
+Charles King <charles.king@cornelisnetworks.com>
 Chenwei Zhang <chenwz@amazon.com>
 Chen Zhao <soniczhao@gmail.com>
 Chien Tin Tung <chien.tin.tung@intel.com>
@@ -188,8 +190,10 @@ Sung-Eun Choi <sungeun@cray.com>
 Sylvain Didelot <didelot.sylvain@gmail.com>
 Sylvain Didelot <sdidelot@ddn.com>
 Thananon Patinyasakdikul <apatinya@cisco.com>
+Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
 Thomas Smith <thomasm2@cisco.com>
+Tim Thompson <tim.thompson@cornelisnetworks.com>
 Todd Rimmer <todd.rimmer@intel.com>
 Tony Zinger <ajz@cray.com>
 tonyzinger <ajz@cray.com>
