--- a/AUTHORS
+++ b/AUTHORS
@@ -175,6 +175,7 @@ Sean Hefty <sean.hefty@intel.com>
 Sergey Oblomov <sergey.oblomov@intel.com>
 Seth Zegelstein <szegel@amazon.com>
 Shantonu Hossain <shantonu.hossain@intel.com>
+Shi Jin <53314885+shijin-aws@users.noreply.github.com>
 Shi Jin <sjina@amazon.com>
 soblomov <sergey.oblomov@intel.com>
 Solovyev, Dmitriy <dmitriy.solovyev@intel.com>
