--- a/AUTHORS
+++ b/AUTHORS
@@ -105,6 +105,7 @@ Johannes Ziegenbalg <Johannes.Ziegenbalg@gmail.com>
 John Biddiscombe <biddisco@cscs.ch>
 John Byrne <john.l.byrne@hpe.com>
 Jonathan Behrens <fintelia@gmail.com>
+Jorge Cabrera <jorge.cabrera@intel.com>
 jose <jose@cst-fs.(none)>
 jose <jose@cstnh-8.(none)>
 JoZie <JoZie@users.noreply.github.com>
@@ -126,6 +127,7 @@ Miao Luo <miao.luo@intel.com>
 Michael Blocksome <michael.blocksome@intel.com>
 Michael Chuvelev <michael.chuvelev@intel.com>
 Michael Heinz <mheinz@cornelisnetworks.com>
+Michael Heinz <michael.heinz@intel.com>
 Mikhail Khalilov <miharulidze@gmail.com>
 Mikhail Khalilov <mikhail.khalilov@intel.com>
 Min Si <msi@anl.gov>
@@ -186,6 +188,7 @@ Stan Smith <stan.smith@intel.com>
 Stephen Oost <stephen.oost@intel.com>
 Steven Vormwald <sdvormwa@cray.com>
 Steve Welch <swelch@systemfabricworks.com>
+Steve Welch <welch@hpe.com>
 Sung-Eun Choi <sungeunchoi@users.noreply.github.com>
 Sung-Eun Choi <sungeun@cray.com>
 Sylvain Didelot <didelot.sylvain@gmail.com>
