--- a/AUTHORS
+++ b/AUTHORS
@@ -197,6 +197,7 @@ Thananon Patinyasakdikul <apatinya@cisco.com>
 Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
 Thomas Smith <thomasm2@cisco.com>
+Tim Thompson <80290075+timothom64@users.noreply.github.com>
 Tim Thompson <tim.thompson@cornelisnetworks.com>
 Todd Rimmer <todd.rimmer@intel.com>
 Tony Zinger <ajz@cray.com>
