--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ aleksandra.justa <ajusta@gklab-125-155.igk.intel.com>
 Alexia Ingerson <alexia.ingerson@intel.com>
 Alex McKinley <alex.mckinley@intel.com>
 Alex McKinley <alex@mckpals.com>
+Amir Shehata <shehataa@ornl.gov>
 Amith Abraham <aabraham@cray.com>
 Ana Guerrero López <ana@ekaia.org>
 Anas Mousa <anasmous@amazon.com>
@@ -125,6 +126,7 @@ Latchesar Ionkov <lionkov@lanl.gov>
 Leena Radeke <leena.radeke@hpe.com>
 Lisanna Dettwyler <levi.e.dettwyler@intel.com>
 Lisanna Dettwyler <lisanna.dettwyler@intel.com>
+Lukasz Dorau <lukasz.dorau@intel.com>
 Marcin Salnik <marcin.salnik@intel.com>
 Martin Kontsek <mkontsek@cisco.com>
 Matt Koop <mkoop@amazon.com>
@@ -181,6 +183,7 @@ Rich Welch <rlwelch@amazon.com>
 Robert Wespetal <wesper@amazon.com>
 Rohit Zambre <rzambre@uci.edu>
 Ryan Hankins <rqh@amazon.com>
+Ryan Hankins <rqh@dev-dsk-rqh-1d-28b29c44.us-east-1.amazon.com>
 Sannikov, Alexander <alexander.sannikov@intel.com>
 Sayantan Sur <sayantan.sur@intel.com>
 Sean Hefty <sean.hefty@intel.com>
@@ -206,6 +209,7 @@ Sylvain Didelot <sdidelot@ddn.com>
 Thananon Patinyasakdikul <apatinya@cisco.com>
 Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
+Thomas Huber <inboxforthomas@gmail.com>
 Thomas Smith <thomasm2@cisco.com>
 Tim Thompson <80290075+timothom64@users.noreply.github.com>
 Tim Thompson <tim.thompson@cornelisnetworks.com>
