NEWS: Update news and readme files from v1.16.x branch
Pull in documentation changes from v1.16.x branch.

Signed-off-by: Sean Hefty <sean.hefty@intel.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -125,6 +125,7 @@ Latchesar Ionkov <lionkov@lanl.gov>
 Leena Radeke <leena.radeke@hpe.com>
 Lisanna Dettwyler <levi.e.dettwyler@intel.com>
 Lisanna Dettwyler <lisanna.dettwyler@intel.com>
+Lukasz Dorau <lukasz.dorau@intel.com>
 Marcin Salnik <marcin.salnik@intel.com>
 Martin Kontsek <mkontsek@cisco.com>
 Matt Koop <mkoop@amazon.com>
@@ -181,6 +182,7 @@ Rich Welch <rlwelch@amazon.com>
 Robert Wespetal <wesper@amazon.com>
 Rohit Zambre <rzambre@uci.edu>
 Ryan Hankins <rqh@amazon.com>
+Ryan Hankins <rqh@dev-dsk-rqh-1d-28b29c44.us-east-1.amazon.com>
 Sannikov, Alexander <alexander.sannikov@intel.com>
 Sayantan Sur <sayantan.sur@intel.com>
 Sean Hefty <sean.hefty@intel.com>
@@ -206,6 +208,7 @@ Sylvain Didelot <sdidelot@ddn.com>
 Thananon Patinyasakdikul <apatinya@cisco.com>
 Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
+Thomas Huber <inboxforthomas@gmail.com>
 Thomas Smith <thomasm2@cisco.com>
 Tim Thompson <80290075+timothom64@users.noreply.github.com>
 Tim Thompson <tim.thompson@cornelisnetworks.com>
