--- a/AUTHORS
+++ b/AUTHORS
@@ -7,6 +7,7 @@ aleksandra.justa <ajusta@gklab-125-155.igk.intel.com>
 Alexia Ingerson <alexia.ingerson@intel.com>
 Alex McKinley <alex.mckinley@intel.com>
 Alex McKinley <alex@mckpals.com>
+Amir Shehata <shehataa@ornl.gov>
 Amith Abraham <aabraham@cray.com>
 Ana Guerrero López <ana@ekaia.org>
 Anas Mousa <anasmous@amazon.com>
@@ -126,6 +127,7 @@ Leena Radeke <leena.radeke@hpe.com>
 Lisanna Dettwyler <levi.e.dettwyler@intel.com>
 Lisanna Dettwyler <lisanna.dettwyler@intel.com>
 Lukasz Dorau <lukasz.dorau@intel.com>
+Luke Robison <lrbison@amazon.com>
 Marcin Salnik <marcin.salnik@intel.com>
 Martin Kontsek <mkontsek@cisco.com>
 Matt Koop <mkoop@amazon.com>
@@ -183,9 +185,11 @@ Robert Wespetal <wesper@amazon.com>
 Rohit Zambre <rzambre@uci.edu>
 Ryan Hankins <rqh@amazon.com>
 Ryan Hankins <rqh@dev-dsk-rqh-1d-28b29c44.us-east-1.amazon.com>
+Sai Sunku <sunkusa@amazon.com>
 Sannikov, Alexander <alexander.sannikov@intel.com>
 Sayantan Sur <sayantan.sur@intel.com>
 Sean Hefty <sean.hefty@intel.com>
+Sergey Fedorov <vital.had@gmail.com>
 Sergey Oblomov <sergey.oblomov@intel.com>
 Seth Zegelstein <szegel@amazon.com>
 Shantonu Hossain <shantonu.hossain@intel.com>
@@ -205,20 +209,24 @@ Sung-Eun Choi <sungeunchoi@users.noreply.github.com>
 Sung-Eun Choi <sungeun@cray.com>
 Sylvain Didelot <didelot.sylvain@gmail.com>
 Sylvain Didelot <sdidelot@ddn.com>
+Tang, Jingyin <jytang@amazon.com>
 Thananon Patinyasakdikul <apatinya@cisco.com>
 Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
 Thomas Huber <inboxforthomas@gmail.com>
 Thomas Smith <thomasm2@cisco.com>
+Thorsten Schütt <schuett@gmail.com>
 Tim Thompson <80290075+timothom64@users.noreply.github.com>
 Tim Thompson <tim.thompson@cornelisnetworks.com>
 Todd Rimmer <todd.rimmer@intel.com>
+Tomasz Gromadzki <tomasz.gromadzki@intel.com>
 Tony Zinger <ajz@cray.com>
 tonyzinger <ajz@cray.com>
 Trevor Hendricks <trevorhe@amazon.com>
 Ubuntu <ubuntu@ip-172-31-15-224.ec2.internal>
 Venkata Krishna Nimmagadda <nvkrishna85@gmail.com>
 Venkata Krishna Nimmagadda <venkata.krishna.nimmagadda@intel.com>
+Vishwas Dsouza <vidsouza@amazon.com>
 Wei Zhang <wzam@amazonc.com>
 Wei Zhang <wzam@amazon.com>
 Wenduo Wang <wenduwan@amazon.com>
