--- a/AUTHORS
+++ b/AUTHORS
@@ -27,6 +27,7 @@ AWS ParallelCluster user <ec2-user@ip-172-31-0-240.us-east-2.compute.internal>
 AWS ParallelCluster user <ec2-user@ip-172-31-15-28.ec2.internal>
 Benjamin Drung <bdrung@debian.org>
 Ben Lynam <ben.lynam23@gmail.com>
+Ben Lynam <ben.lynam@cornelisnetworks.com>
 Ben Menadue <ben.menadue@nci.org.au>
 Ben Turrubiates <bturrubiates@lanl.gov>
 Ben Turrubiates <bturrubi@cisco.com>
@@ -214,6 +215,7 @@ Thananon Patinyasakdikul <apatinya@cisco.com>
 Theofilos Manitaras <manitaras@cscs.ch>
 Thibault BREZILLON <thibault.brezillon@techsat.com>
 Thomas Huber <inboxforthomas@gmail.com>
+Thomas Huber <thomas.huber@cornelisnetworks.com>
 Thomas Smith <thomasm2@cisco.com>
 Thorsten Schütt <schuett@gmail.com>
 Tim Thompson <80290075+timothom64@users.noreply.github.com>
