Modification of punctuation marks in fabtests manual page
Signed-off-by: Zhaojuan Guo <zguo@redhat.com>

--- a/fabtests/man/man7/fabtests.7
+++ b/fabtests/man/man7/fabtests.7
@@ -350,7 +350,7 @@ file.
 .B \f[I]prov_name\f[]
 Identify the provider(s) to test.
 E.g.
-udp, tcp, verbs, ofi_rxm;verbs; ofi_rxd;udp.
+udp, tcp, verbs, ofi_rxm;verbs, ofi_rxd;udp.
 .RS
 .RE
 .TP
